Replaced Math.clamp() with Math.min(Math.max()) construct due to java 17